created layout activity_question with 4 questions of different types( one check box, one radio button, two text entry) and a submit button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:padding="8dp"
             android:text="@string/observe_carefully"/>
         <ImageView
             android:id="@+id/android_image"
