--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -5,7 +5,10 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/question_one"
@@ -15,9 +18,9 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:contentDescription="@string/question_one"
-            android:text= "@string/select_Android_versions"
-            android:textSize="16sp"
-            android:textColor="@color/colorPrimary"/>
+            android:text="@string/select_Android_versions"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:id="@+id/answer_one"
@@ -30,22 +33,22 @@
                 android:id="@+id/answer_checkbox_one"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:text= "@string/JeallyBean"/>
+                android:text="@string/JeallyBean"
+                android:textAppearance="?android:textAppearanceMedium" />
 
             <CheckBox
                 android:id="@+id/answer_checkbox_two"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:text= "@string/KitKat"/>
+                android:text="@string/KitKat"
+                android:textAppearance="?android:textAppearanceMedium" />
 
             <CheckBox
                 android:id="@+id/answer_checkbox_three"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:text= "@string/Ringo"/>
+                android:text="@string/Ringo"
+                android:textAppearance="?android:textAppearanceMedium" />
         </LinearLayout>
 
         <TextView
@@ -55,8 +58,8 @@
             android:layout_below="@id/answer_one"
             android:contentDescription="@string/question_two"
             android:text="@string/which_of_these_is_an_android_keyword"
-            android:textSize="16sp"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
 
         <RadioGroup
             android:id="@+id/answer_two"
@@ -69,15 +72,15 @@
                 android:id="@+id/radio_button_one"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:text= "@string/converge"/>
+                android:text="@string/converge"
+                android:textAppearance="?android:textAppearanceMedium" />
 
             <RadioButton
                 android:id="@+id/radio_button-two"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:text= "@string/bool"/>
+                android:text="@string/bool"
+                android:textAppearance="?android:textAppearanceMedium" />
 
             <RadioButton
                 android:id="@+id/radio_button-three"
@@ -95,34 +98,35 @@
             android:layout_below="@id/answer_two"
             android:contentDescription="@string/question_three"
             android:text="@string/what_is_the_name_of_8_0_version"
-            android:textSize="16sp"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/answer_three"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/question_three"
-            android:contentDescription="answer three"
-            />
+            android:contentDescription="@string/answer_three"
+            android:focusableInTouchMode="true"
+            android:inputType="textShortMessage" />
 
         <TextView
             android:id="@+id/question_four"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/answer_three"
-            android:contentDescription="question_four"
+            android:contentDescription="@string/question_four"
             android:text="@string/what_is_the_name_of_android_7_version"
-            android:textSize="16sp"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/answer_four"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/question_four"
-            android:contentDescription="answer_four" />
-
+            android:contentDescription="@string/answer_four"
+            android:inputType="textShortMessage" />
 
         <Button
             android:id="@+id/submit_button"
